[gd_scene load_steps=25 format=2]

[ext_resource path="res://Enemy/PlayerDetection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Slime.gd" type="Script" id=2]
[ext_resource path="res://Enemy/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/slime_walk_anim_strip_18.png" type="Texture" id=4]
[ext_resource path="res://Enemy/WanderController.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 176, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 208, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=17]
radius = 4.0

[sub_resource type="CircleShape2D" id=18]
radius = 39.0

[sub_resource type="CircleShape2D" id=19]
radius = 7.0

[node name="Slime" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "Walk"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 17 )

[node name="PlayerDetection" parent="." instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.270588 )
shape = SubResource( 18 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 8 )
shape = SubResource( 19 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]

[editable path="PlayerDetection"]

[editable path="SoftCollision"]

[editable path="WanderController"]
